--- a/scripts/packaging/macos/Resources/snowflake-cli_welcome.html
+++ b/scripts/packaging/macos/Resources/snowflake-cli_welcome.html
@@ -10,10 +10,10 @@ body {
 </style>
 <body>
 <p>
-SnowSQL(<span class="monospace">snowsql</span>) is the next generation Snowflake CLI.
+SnowflakeCLI(<span class="monospace">snow</span>) is the next generation CLI.
 </p>
 <p>
-The installer copies the <span class="monospace">SnowSQL</span> application bundle to the
+The installer copies the <span class="monospace">SnowflakeCLI</span> application bundle to the
 <span class="monospace">~/Applications</span> or
 <span class="monospace">/Applications</span> directory. The installer also adds the necessary Python library
 path to your <span class="monospace">~/.profile</span>, <span class="monospace">~/.bash_profile</span>,
